Fixed bug in link. Fixed number of generations to include current dog.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
               <option value="4">4 ledd</option>
               <option value="5">5 ledd</option>
               <option value="6" selected>6 ledd</option>
+              <option value="7">7 ledd</option>
+              <option value="8">8 ledd</option>
+              <option value="9">9 ledd</option>
             </select>
             <button class="btn btn-primary" id="searchBtn">Søk</button>
           </form>
