Added loading-screen. "Cloaks" regno, if it exists.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,13 @@
         </div>
 
       </div>
-    </div>
+
+      <div id="blanket" style="display:none;">
+        <div id="blanketbox">
+          
+          Laster data...
+        </div>
+      </div>
 
     <!-- Modal -->
     <div class="modal fade" id="dataMissingModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
