Added fictitious pedigree search.

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
               <button class="btn btn-primary" id="searchBtn">Søk</button>
             </form>
 
-            <form action="" name="fictiousForm" id="fictiousForm" class="navbar-form navbar-left">
+            <form action="" name="fictitiousForm" id="fictitiousForm" class="navbar-form navbar-left">
               <input type="text" id="mateIds" name="mateIds" style="padding: .5em; border: 1px solid #ddd;" placeholder="RegNo. Separer med ; for søk på flere.">
-              <button class="btn btn-primary" id="fictiousBtn">Fiktiv stamtavle</button>
+              <button class="btn btn-primary" id="fictitiousBtn">Fiktiv stamtavle</button>
             </form>
 
             <ul class="nav navbar-nav navbar-right" style="display:none;">
@@ -77,6 +77,7 @@
             <h4 class="modal-title" id="myModalLabel">Meld fra om manglende informasjon</h4>
           </div>
           <div class="modal-body">
+            <div class="alert alert-danger">OBS: Denne funksjonen er under utvikling, og fungerer ikke ennå.</div>
             <h6>Her skulle vi hatt følgende hund</h6>
             <input type="text" class="form-control" placeholder="Registreringsnummer eller ID">
             <h6 class="emailheader" title="E-post som samles inn her vil kun brukes i forbindelse med informasjon om status på feilretting i system.">Din e-post</h6>
@@ -99,6 +100,7 @@
             <h4 class="modal-title" id="myModalLabel">Meld fra om feil</h4>
           </div>
           <div class="modal-body">
+            <div class="alert alert-danger">OBS: Denne funksjonen er under utvikling, og fungerer ikke ennå.</div>
             <h6>Dette er feil</h6>
             <input type="text" class="form-control" placeholder="Hva er feil?">
             <h6>Beskrivelse</h6>
